Alignment fix for list items

--- a/custom.css
+++ b/custom.css
@@ -126,4 +126,5 @@
 .flex-list-item {
     display: grid;
     grid-auto-flow: column;
+    grid-template-columns: min-content;
 }
